make it possible to install with recommends

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 # defaults file for common_packages
 package_state: "{{ item.state | default('latest') }}"
+package_recommends: "{{ item.with_recommends | default('no') }}"
 package_purge: "{{ item.purge | default('yes') }}"
 package_release: "{{ item.release | default(ansible_distribution_release) }}"
 
