add update of sources

--- a/tasks/apt_install.yml
+++ b/tasks/apt_install.yml
@@ -2,6 +2,9 @@
 
 # install tasks for apt based hosts
 
+- name: update package lists
+  command: "aptitude update"
+
 - name: install common packages (apt)
   apt:
     name: "{{ item.name | default(item) }}"
