dont say it has changed ;)

--- a/tasks/apt_install.yml
+++ b/tasks/apt_install.yml
@@ -4,6 +4,7 @@
 
 - name: update package lists
   command: "aptitude update"
+  changed_when: False
 
 - name: install common packages (apt)
   apt:
